# StdUI

./: .clang-format  .gitignore  CMakeLists.txt  PROTOCOL.md  README.md  build.sh  build_debug.sh  build_release.bat  go.work  go.work.sum  libEGL.dylib  main.cpp
.github/workflows/: build.yml  deploy-docs.yml  test-docs.yml
docs/: docusaurus.config.ts
docs/docs/: intro.md  ipc-transports.md
docs/docs/protocol/: actions.md  element-actions.md  index.md  keybinds.md  pane-layout.md  scroll.md  window.md
docs/docs/protocol/elements/: button.md  checkbox.md  color.md  file-save.md  file-select.md  folder-select.md  index.md  input.md  progress.md  select.md  slider.md  textarea.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
example/chat/: README.md  go.mod  main.go
example/interactive-elements/: README.md  go.mod  main.go
example/ipc/: README.md  go.mod  main.go
example/irc/: README.md  go.mod  main.go
example/simple/: README.md  go.mod  main.go
example/todo/: README.md  go.mod  main.go
sdk/go/: binary.go  client.go  go.mod  handlers.go  settings.go  transport.go  transport_unix.go  transport_windows.go
src/: action.cpp  action.hpp  actions.cpp  actions.hpp  audio.cpp  audio.hpp  elements.cpp  elements.hpp  io.cpp  io.hpp  layout.cpp  layout.hpp  log.cpp  log.hpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  state.cpp  state.hpp  texture_cache.cpp  texture_cache.hpp
src/audio/: sfx.cpp  sfx.hpp
src/ui/: col.cpp  col.hpp  style.cpp  style.hpp
